# hojo

./: Cargo.toml  README.md
migrations/: 20230611003700_create-user.sql  20230611005341_user-features.sql  20230611005532_create_stats.sql  20230611014433_create_scores.sql  20230611021613_score_constraint_fix.sql  20230611200846_beatmap_storing.sql  20230611201853_score_stuff.sql  20230611204140_add_extra_columns.sql  20230611231314_accuracy_user.sql  20230611231458_accuracy_stats.sql  20230612004600_rename_users_table.sql
src/: main.rs
src/models/: auth.rs  mod.rs  score.rs  stats.rs  user.rs
src/requests/: mod.rs  response.rs
src/utils/: config.rs  payload.rs  response.rs
src/web/: login.rs  mod.rs  play.rs  register.rs
