[package]
name = "hojo"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["."]


[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.18", features = ["tracing", "macros"] }
axum-login = { version = "0.5.0", features = ["postgres"] }
bcrypt = "0.14.0"
bevy_reflect = "0.10.1"
chrono = { version = "0.4.26", features = ["serde"] }
derivative = "2.2.0"
dotenvy = "0.15.7"
envy = "0.4.2"
itertools = "0.10.5"
nutype = "0.2.0"
rand = { version = "0.8.5", features = ["min_const_gen"] }
rosu-pp = { version = "0.9.4", features = ["async_tokio"] }
rosu-v2 = "0.7.0"
serde = { version = "1.0.164", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "time"] }
strum = { version = "0.24.1", features = ["strum_macros", "derive"] }
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
